--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -81,7 +81,7 @@ Comment[nl]=Deze plugin maakt het mogelijk om journalen uit te printen (dagboeki
 Comment[nn]=Dette programtillegget lèt deg skriva ut dagbokoppføringar.
 Comment[pl]=Ta wtyczka pozwala drukować wpisy dziennika.
 Comment[pt]=Este diário permite-lhe imprimir os itens de diário.
-Comment[pt_BR]=Esse plug-in permite que você imprima entradas de diário.
+Comment[pt_BR]=Este plug-in permite-lhe imprimir entradas de diário.
 Comment[ru]=Этот модуль позволяет печатать журнал в виде дневника.
 Comment[sk]=Tento modul umožní vytlačiť položky žurnálu (denníkové položky).
 Comment[sl]=Ta vstavek vam omogoča natis vnosov v dnevnik.
