--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -80,7 +80,7 @@ Comment[nl]=Deze plugin maakt het mogelijk om evenementen en taken in lijstvorm 
 Comment[nn]=Dette programtillegget lèt deg skriva ut hendingar og hugselister på listeform.
 Comment[pl]=Ta wtyczka pozwala drukować zdarzenia i zadania w postaci listy.
 Comment[pt]=Este 'plugin' permite-lhe imprimir os eventos e os itens por-fazer no formato de uma lista.
-Comment[pt_BR]=Este plug-in permite que você imprima eventos e pendências em forma de lista.
+Comment[pt_BR]=Este plug-in permite-lhe imprimir eventos e pendências em forma de lista.
 Comment[ru]=Этот модуль позволяет печатать список событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť udalosti a úlohy vo forme zoznamu.
 Comment[sl]=Ta vstavek vam omogoča natis dogodkov in čakajočih opravil v obliki seznama.
