--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -32,12 +32,14 @@ Name[x-test]=xxWikipedia 'This Day in History' Pluginxx
 Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
+Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
-Comment[pt_BR]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
+Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipedia
 Comment[sv]=Insticksprogrammet tillhandahåller länkar till Wikipedias sida 'Den här dagen i historien'
 Comment[uk]=Цей додаток працює з посиланнями на сторінки Вікіпедії «Цей день в історії»
+Comment[zh_TW]=這個外掛程式提供連結到維基百科中的「歷史上的今天」。
 Type=Service
 X-KDE-ServiceTypes=Calendar/Plugin,Calendar/Decoration
 X-KDE-KOrganizer-HasSettings=false
