SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=898967

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -35,6 +35,7 @@ Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
+Comment[gl]=Esta extensión fornece a imaxe do día da Wikipedia
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
