SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=899363

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -49,7 +49,7 @@ Comment[fi]=Kalenteritekstin koristeluliitännäinen
 Comment[fr]=Module de décoration d'agenda
 Comment[fy]=Agindadekoraasjeplugin
 Comment[ga]=Breiseán Maisíochta Féilire
-Comment[gl]=Extensión para a Decoración do Calendario
+Comment[gl]=Engadido para a Decoración do Calendario
 Comment[he]=תוסף קישוטי לוח שנה
 Comment[hr]=Dodatak za dekoraciju kalendara
 Comment[hu]=Naptármegjelenési bővítőmodul
