--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -11,7 +11,7 @@ Name[et]=Wikipedia päevapildi plugin kalendritele
 Name[fa]=عکس ویکی پدیا از وصلۀ روز برای تقویمها
 Name[fi]=Wikipedian päivän kuva -liitännäinen
 Name[fr]=Module externe « Image du jour » de Wikipédia
-Name[gl]=Extensión para a Imaxe do Dí­a da Wikipedia nos Calendarios
+Name[gl]=Engadido para a Imaxe do Dí­a da Wikipedia nos Calendarios
 Name[it]=Plugin "foto del giorno" da Wikipedia per i calendari
 Name[ja]=Wikipedia 今日の写真プラグイン
 Name[km]=រូបភាព​របស់ Wikipedia នៃ​​កម្មវិធី​ជំនួយ​ថ្ងៃ​សម្រាប់​ប្រតិទិន
@@ -35,7 +35,7 @@ Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
-Comment[gl]=Esta extensión fornece a imaxe do día da Wikipedia
+Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
