--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -62,7 +62,7 @@ Comment[fa]=این وصله، به شما اجازه می‌دهد که مدخل
 Comment[fi]=Tämä liitännäinen mahdollistaa päiväkirjan tulostuksen.
 Comment[fr]=Ce module vous permet d'imprimer les entrées de votre journal
 Comment[ga]=Leis an mbreiseán seo is féidir leat iontrálacha dialainne a phriontáil.
-Comment[gl]=Esta extensión permí­telle imprimir as entradas do diario (entradas do diario).
+Comment[gl]=Este engadido permite imprimir as entradas do diario.
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
 Comment[it]=Questo plugin ti permette di stampare le registrazioni del diario.
