--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -56,7 +56,7 @@ Comment[fa]=این وصله، به شما اجازه می‌دهد که مدخل
 Comment[fi]=Tämä liitännäinen mahdollistaa vuosikalenterin tulostaminen
 Comment[fr]=Ce module vous permet d'imprimer l'ensemble de l'année
 Comment[fy]=Comment=Dizze plugin makket it mooglik om in jierkalinder Ãºt te printsjen.
-Comment[gl]=Esta extensión permite imprimir un calendario anual.
+Comment[gl]=Este engadido permite imprimir un calendario anual.
 Comment[hu]=Ez a modul egy egész éves naptár kinyomtatását teszi lehetővé.
 Comment[it]=Questo plugin ti permette di stampare un calendario annuale.
 Comment[ja]=このプラグインにより、年単位のカレンダーを印刷できるようになります。
