--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -9,7 +9,7 @@ Name[es]=Complemento de «Este día en la historia» de la Wikipedia
 Name[et]=Wikipedia 'täna ajaloos' plugin
 Name[fi]=Wikipedian "Tämä päivä historiassa" -liitännäinen
 Name[fr]=Module externe « Ce jour dans l'histoire » d'après Wikipédia
-Name[gl]=Extensión "Este Dí­a na Historia" da Wikipedia
+Name[gl]=Engadido "Este Dí­a na Historia" da Wikipedia
 Name[it]=Plugin "Questo giorno nella storia" da Wikipedia
 Name[ja]=Wikipedia 今日は何の日プラグイン
 Name[km]=កម្មវិធី 'ថ្ងៃនេះ​ក្នុង​ប្រវត្តិ' របស់វីគីភីឌៀ
@@ -33,7 +33,7 @@ Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
-Comment[gl]=Esta extensión fornece ligazóns ás páxinas de efemérides da Wikipedia
+Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Historia" da Wikipedia
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
