--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -8,7 +8,7 @@ Name[es]=Interfaz del complemento de impresión de KOrganizer
 Name[et]=KOrganizeri trükkimisplugina liides
 Name[fr]=Interface de module d'impression d'agenda
 Name[ga]=Comhéadan Breiseáin Priontála KOrganizer
-Name[gl]=Interface da Extensión de Impresión de KOrganizer
+Name[gl]=Interface do Engadido de Impresión de KOrganizer
 Name[it]=Interfaccia del plugin di stampa di KOrganizer
 Name[ja]=KOrganizer 印刷プラグインインターフェース
 Name[km]=ចំណុច​ប្រទាក់​កម្មវិធី​ជំនួយ​​បោះពុម្ព KOrganizer
