--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -18,7 +18,7 @@ Name[fi]=Juutalaisen kalenterin laajennus
 Name[fr]=Module de prise en charge du calendrier juif
 Name[fy]=Joadske kalenderplugin
 Name[ga]=Breiseán Féilire Giúdaí
-Name[gl]=Extensión para Calendario Xudeu
+Name[gl]=Engadido para o Calendario Xudeu
 Name[hu]=Bővítőmodul a zsidó naptár kezeléséhez
 Name[is]=Gyðinga dagatalsíforrit
 Name[it]=Plugin calendario ebraico
