--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -61,7 +61,7 @@ Comment[eu]=Plugin honek gertaerak eta egitekoak zerrenda moduan inprimatzeko au
 Comment[fa]=این وصله به شما اجازه می‌دهد که رویدادها و کارهای انجامی را در برگۀ فهرست چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa tapahtumien ja tehtävien tulostuksen listana.
 Comment[fr]=Ce module vous permet d'imprimer les évènements et les tâches sous forme de liste
-Comment[gl]=Esta extensión permí­telle imprimir os eventos e as tarefas en forma de listaxe.
+Comment[gl]=Este engadido permi­te imprimir os eventos e as tarefas en forma de listaxe.
 Comment[hu]=Ezzel a modullal listaként kinyomtathatók a feladatok és események.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista með atburðum og verkþáttum.
 Comment[it]=Questo plugin ti permette di stampare eventi e cose da fare in modalità elenco.
