SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=899713

--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -21,7 +21,7 @@ Name[he]=תוסף מספרי תאריכים ללוחות שנה
 Name[hu]=Dátumkezelő bővítőmodul naptárakhoz
 Name[is]=Íforrit fyrir númer dags á dagatali
 Name[it]=Plugin delle date per i calendari
-Name[ja]=日数表示カレンダープラグイン
+Name[ja]=日数表示プラグイン
 Name[ka]=თარიღის რიცხვების მოდული კალენდრებისათვის
 Name[kk]=Күнтізбедегі күн нөмірінің модулі
 Name[km]=កម្មវិធី​ជំនួយ​លេខ​កាលបរិច្ឆេទ​សម្រាប់​ប្រតិទិន
@@ -66,7 +66,7 @@ Comment[gl]=Este engadido amosa o dí­a do ano na vista superior da axenda. Por
 Comment[hu]=Megjeleníti az év elejétől eltelt napok számát az áttekintő nézet tetején. Például február elseje az év 32. napja.
 Comment[is]=Þetta íforrit sýnir efst í fundarskránni númer hvers dags í árinu. T.d. er 1. febrúar 32. dagurinn í árinu.
 Comment[it]=Per ciascun giorno, questo plugin mostra la data giuliana (numero progressivo a partire dal primo gennaio dell'anno corrente). Per esempio al primo di febbraio corrisponde il numero 32.
-Comment[ja]=このプラグインは予定表ビューの上に、それぞれの日がその年の何日目であるかを表示します。例えば、2 月 1 日はその年の 32 日目です。
+Comment[ja]=このプラグインは予定表ビューの上に、それぞれの日がその年の何日目であるかを表示します。例えば、2月1日はその年の32日目です。
 Comment[ka]= გეგმის ზედა ხედში ეს მოდული თვითეული დღისათვის  აჩვენებს მის დღის ნომერს ამ წლისათვის . მაგალითად,1 თებერვალი წლის 32-ე დღეა.
 Comment[kk]=Бұл модуль күн тәртібі бетінің жоғарында жыл басынан өткен күндер санын көрсетеді. Мысалы, 1-ақпан - жылдың 32-күні.
 Comment[km]=សម្រាប់​ថ្ងៃ​នីមួយៗ កម្មវិធី​ជំនួយ​នេះ​នឹង​បង្ហាញ​លេខ​ថ្ងៃ​នៃ​ឆ្នាំ នៅ​ផ្នែក​ខាង​លើ​នៃ​ទិដ្ឋភាព​របៀបវារៈ ។ ឧទាហរណ៍ ថ្ងៃ​ទី ១ ខែ កុម្ភៈ នឹង​ត្រូវ​ជា​ថ្ងៃ​ទី ៣២ នៃ​ឆ្នាំ ។
