--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -32,14 +32,18 @@ Name[x-test]=xxWikipedia 'This Day in History' Pluginxx
 Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
+Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
 Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Historia" da Wikipedia
+Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
 Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipedia
 Comment[sv]=Insticksprogrammet tillhandahåller länkar till Wikipedias sida 'Den här dagen i historien'
+Comment[tr]=Bu eklenti, Wikipedia'nın 'Tarihte Bugün' sayfalarına bağlantı sağlar
 Comment[uk]=Цей додаток працює з посиланнями на сторінки Вікіпедії «Цей день в історії»
+Comment[zh_CN]=此插件提供了对 Wikipedia 上“历史上的今天”页面的链接
 Comment[zh_TW]=這個外掛程式提供連結到維基百科中的「歷史上的今天」。
 Type=Service
 X-KDE-ServiceTypes=Calendar/Plugin,Calendar/Decoration
