--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -22,7 +22,7 @@ Name[gl]=Engadido para o Calendario Xudeu
 Name[hu]=Bővítőmodul a zsidó naptár kezeléséhez
 Name[is]=Gyðinga dagatalsíforrit
 Name[it]=Plugin calendario ebraico
-Name[ja]=ユダヤ歴カレンダープラグイン
+Name[ja]=ユダヤ歴プラグイン
 Name[ka]=ებრაული კალენდრის მოდული
 Name[kk]=Яһуди күнтізбесінің модулі
 Name[km]=កម្មវិធី​ជំនួយ​ប្រតិទិន Jewish
