--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -34,14 +34,18 @@ Name[zh_CN]=日历的每日 Wikipedia 贴图插件
 Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
+Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
 Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
+Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
 Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
 Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
+Comment[tr]=Bu eklenti Wikipedia'dan Günün Resmini getirir
 Comment[uk]=Цей додаток працює з «Зображеннями дня» з Вікіпедії
+Comment[zh_CN]=此插件提供对 Wikipedia 每日图片的支持
 Comment[zh_TW]=此外掛程式提供連結到維基百科中的「本日圖片」。
 X-KDE-ServiceTypes=Calendar/Plugin,Calendar/Decoration
 X-KDE-KOrganizer-HasSettings=true
