SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=900707

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -36,6 +36,7 @@ Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
+Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
