SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=902474

--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -39,6 +39,7 @@ Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Histori
 Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
+Comment[pl]=Wtyczka dostarcza linki do stron 'Ten dzień w historii' Wikipedii
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
 Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipedia
 Comment[sl]=Ta vstavek ponuja povezave na Wikipedijino stran »Na današnji dan«
