SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=902939

--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -35,6 +35,7 @@ Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
 Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
 Comment[et]=See plugin näitab Wikipedia 'täna ajaloos' lehekülgi
+Comment[fr]=Ce module externe fourni un lien vers la page « Ce jour dans l'histoire » de Wikipédia
 Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Historia" da Wikipedia
 Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
