SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=904557

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -42,6 +42,7 @@ Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
+Comment[nl]=Deze plugin geeft de Wikipedia-afbeelding van de dag
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
 Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
