SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=905490

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -19,7 +19,7 @@ Name[nl]=Agendadecoratie-uiterlijk
 Name[nn]=Grensesnitt til kalenderpynt
 Name[pl]=Interfejs do dekoracji kalendarza
 Name[pt]=Interface de Decoração do Calendário
-Name[pt_BR]=Interface para Decoração do Calendário
+Name[pt_BR]=Interface de decoração do calendário
 Name[ro]=Interfață decorare calendar
 Name[sl]=Vmesnik za okraševanje koledarja
 Name[sv]=Gränssnitt för kalenderdekoration
@@ -72,7 +72,7 @@ Comment[nn]=Programtillegg for kalenderpynt
 Comment[pa]=ਕੈਲੰਡਰ ਸਜਾਵਟ ਪਲੱਗਇਨ
 Comment[pl]=Wtyczka do dekoracji kalendarza
 Comment[pt]='Plugin' de Decoração do Calendário
-Comment[pt_BR]=Plug-in para Decoração do Calendário
+Comment[pt_BR]=Plug-in para decoração do calendário
 Comment[ro]=Modul decorare calendar
 Comment[ru]=Оформление календаря
 Comment[se]=Kaleandarčiŋaid lassemoduvla
