--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -19,7 +19,7 @@ Name[nl]=KOrganizer-componentuiterlijk
 Name[nn]=Grensesnitt til KOrganizer-del
 Name[pl]=Moduł KOrganizera
 Name[pt]=Interface de Componente do KOrganizer
-Name[pt_BR]=Interface do Componente do KOrganizer
+Name[pt_BR]=Interface do componente do KOrganizer
 Name[ro]=Interfață Componentă KOrganizer
 Name[sl]=KOrganizerjev vmesnik za Dele
 Name[sv]=Korganizers delgränssnitt
