--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -52,7 +52,7 @@ Name[nn]=Tilpassa sider
 Name[pa]=ਕਸਟਮ ਪੇਜ਼
 Name[pl]=Własne strony
 Name[pt]=Páginas Personalizadas
-Name[pt_BR]=Páginas Personalizadas
+Name[pt_BR]=Páginas personalizadas
 Name[ro]=Pagini personalizate
 Name[ru]=Дополнительные поля
 Name[se]=Iežat siiddut
@@ -106,7 +106,7 @@ Comment[nn]=Set opp dei tilpassa sidene
 Comment[pa]=ਕਸਟਮ ਪੇਜ਼ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja własnych stron
 Comment[pt]=Configurar as Páginas Personalizadas
-Comment[pt_BR]=Configurar Páginas Personalizadas
+Comment[pt_BR]=Configurar páginas personalizadas
 Comment[ro]=Configurează paginile personalizate
 Comment[ru]=Настройка пользовательских вкладок
 Comment[se]=Heivet iežat siidduid
