--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -50,7 +50,7 @@ Name[nn]=Gruppeplanlegging
 Name[pa]=ਗਰੁੱਡ ਸ਼ੈਡਿਊਲ
 Name[pl]=Planowanie grupowe
 Name[pt]=Calendarização em Grupo
-Name[pt_BR]=Agendamento de Grupo
+Name[pt_BR]=Agendamento de grupo
 Name[ro]=Planificare grup
 Name[ru]=Календарь группы
 Name[se]=Joavkoplánen
@@ -101,7 +101,7 @@ Comment[nl]=KOrganizer groepsplanning instellen
 Comment[nn]=Oppsett av gruppeplanlegging i KOrganizer
 Comment[pl]=Konfiguracja planowania grupowego dla KOrganizera
 Comment[pt]=Configuração do Escalonamento do Grupo do KOrganizer
-Comment[pt_BR]=Configuração de Agendamento de Grupo do KOrganizer
+Comment[pt_BR]=Configuração de agendamento de grupo do KOrganizer
 Comment[ru]=Настройка календаря группы органайзера KDE
 Comment[se]=KOrganizer, joavkoplánema heivehusat
 Comment[sk]=Nastavenie skupinového plánovania pre KOrganizer
