--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -54,7 +54,7 @@ Name[oc]=Visualizacions
 Name[pa]=ਝਲਕ
 Name[pl]=Widoki
 Name[pt]=Janelas
-Name[pt_BR]=Visões
+Name[pt_BR]=Visualizações
 Name[ro]=Vizualizări
 Name[ru]=Вид
 Name[se]=Čájeheamit
@@ -109,7 +109,7 @@ Comment[nl]=KOrganizer weergave instellen
 Comment[nn]=Visingsoppsett for KOrganizer
 Comment[pl]=Konfiguracja widoków KOrganizera
 Comment[pt]=Configuração das Janelas do KOrganizer
-Comment[pt_BR]=Configuração de Visões do KOrganizer
+Comment[pt_BR]=Configuração de visualizações do KOrganizer
 Comment[ro]=Configurare vizualizări KOrganizer
 Comment[ru]=Настройка видов органайзера KDE
 Comment[sk]=Nastavenie pohľadov pre KOrganizer
