--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -36,7 +36,7 @@ Name[nl]=KOrganizer herinneringsdaemon
 Name[nn]=Alarmklient for KOrganizer
 Name[pl]=Klient przypominania KOrganizera
 Name[pt]=Cliente de Avisos do KOrganizer
-Name[pt_BR]=Cliente do Lembretes do KOrganizer
+Name[pt_BR]=Cliente de lembretes do KOrganizer
 Name[ru]=Уведомления KOrganizer
 Name[sk]=Klient pripomienok pre KOrganizer
 Name[sl]=Odjemalec za opomnik KOrganizerja
@@ -84,7 +84,7 @@ GenericName[nl]=KOrganizer herinneringsdaemon
 GenericName[nn]=Alarmteneste for KOrganizer
 GenericName[pl]=Klient demona przypominania KOrganizera
 GenericName[pt]=Cliente do Servidor de Avisos do KOrganizer
-GenericName[pt_BR]=Cliente do Servidor de Lembretes do KOrganizer
+GenericName[pt_BR]=Cliente do servidor de lembretes do KOrganizer
 GenericName[ru]=Клиент службы уведомлений KOrganizer
 GenericName[sk]=Klient KOrganizer pre démona pripomienok
 GenericName[sl]=Pritajeni odjemalec za opomnik KOrganizerja
