--- a/korganizer-import.desktop
+++ b/korganizer-import.desktop
@@ -41,7 +41,7 @@ Comment[nn]=Kalender- og planleggingsprogram
 Comment[pa]=ਕੈਲੰਡਰ ਅਤੇ ਸ਼ੈਡਿਊਲ ਪਰੋਗਰਾਮ
 Comment[pl]=Kalendarz i terminarz
 Comment[pt]=Calendário e Programa de Escalonamento
-Comment[pt_BR]=Programa de Calendário e Agenda
+Comment[pt_BR]=Programa de calendário e agenda
 Comment[ro]=Program de planificare și calendar
 Comment[ru]=Календарь и личное расписание
 Comment[se]=Kaleandar- ja plánenprográmma
@@ -117,7 +117,7 @@ GenericName[nl]=Persoonlijke organizer
 GenericName[nn]=Elektronisk lommeplanleggjar
 GenericName[pl]=Osobisty organizator
 GenericName[pt]=Organizador Pessoal
-GenericName[pt_BR]=Organizador Pessoal
+GenericName[pt_BR]=Organizador pessoal
 GenericName[ro]=Organizator personal
 GenericName[ru]=Персональный органайзер
 GenericName[sk]=Osobný plánovač
