--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -38,7 +38,7 @@ Name[nl]=Joodse kalenderplugin
 Name[nn]=Kalender-programtillegg for jødisk kalender
 Name[pl]=Wtyczka kalendarza żydowskiego
 Name[pt]='Plugin' do Calendário Judeu
-Name[pt_BR]=Plug-in de Calendário Judaico
+Name[pt_BR]=Plug-in de Calendário judaico
 Name[ro]=Modul calendar evreiesc
 Name[ru]=Еврейский календарь
 Name[sk]=Modul Židovského kalendára
