--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -36,7 +36,7 @@ Name[nn]=Utskriftsstil for dagbok
 Name[pa]=ਜਰਨਲ ਪਰਿੰਟ ਸਟਾਇਲ
 Name[pl]=Styl drukowania dziennika
 Name[pt]=Estilo de Impressão em Diário
-Name[pt_BR]=Estilo de Impressão de Diário
+Name[pt_BR]=Estilo de impressão de diário
 Name[ru]=Журнал
 Name[sk]=Štýl tlače žurnálu
 Name[sl]=Dnevniški slog tiskanja
