--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -36,7 +36,7 @@ Name[nn]=Utskriftsstil for lister
 Name[pa]=ਲਿਸਟ ਪਰਿੰਟ ਸਟਾਇਲ
 Name[pl]=Styl drukowania listy
 Name[pt]=Estilo de Impressão em Lista
-Name[pt_BR]=Estilo de Impressão em Lista
+Name[pt_BR]=Estilo de impressão em lista
 Name[ru]=Список
 Name[sk]=Štýl tlače zoznamu
 Name[sl]=Slog tiskanja v obliki list
