--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -32,7 +32,7 @@ Name[nn]=Utskriftsstil for år
 Name[pa]=ਸਾਲਨਾ ਪਰਿੰਟ ਸਟਾਇਲ
 Name[pl]=Styl drukowania roku
 Name[pt]=Estilo de Impressão em Anuário
-Name[pt_BR]=Estilo de Impressão Anual
+Name[pt_BR]=Estilo de impressão anual
 Name[ru]=Календарь на год
 Name[sk]=Štýl tlače pre rok
 Name[sl]=Letni slog tiskanja
@@ -73,7 +73,7 @@ Comment[nl]=Deze plugin maakt het mogelijk om een jaarkalender af te drukken.
 Comment[nn]=Dette programtillegget lèt deg skriva ut ein årleg kalender.
 Comment[pl]=Ta wtyczka pozwala drukować roczny kalendarz.
 Comment[pt]=Este 'plugin' permite-lhe imprimir um calendário anual.
-Comment[pt_BR]=Esse plug-in permite que você imprima um calendário anual.
+Comment[pt_BR]=Esse plug-in permite-lhe imprimir um calendário anual.
 Comment[ru]=Этот модуль позволяет печатать календарь на год.
 Comment[sk]=Tento modul vám umožní vytlačiť kalendár na rok.
 Comment[sl]=Ta vstavek vam omogoča natis letnega koledarja.
