--- a/plugins/timespanview/timespanview.desktop
+++ b/plugins/timespanview/timespanview.desktop
@@ -33,7 +33,7 @@ Name[nl]=Tijdspanneplugin voor KOrganizer
 Name[nn]=Programtillegg for tidsromvising i KOrganizer
 Name[pl]=Wtyczka widoku zakresu czasu dla KOrganizera
 Name[pt]='Plugin' de Vista de Intervalo de Tempo para o KOrganizer
-Name[pt_BR]=Plug-in de Visualização de Período de Tempo Para o KOrganizer
+Name[pt_BR]=Plug-in de Visualização de período de tempo para o KOrganizer
 Name[ru]=Диаграмма Ганта для KOrganizer
 Name[sk]=KOrganizer modul pre projektový pohľad
 Name[sl]=Vstavek za časovni prikaz za KOrganizer
@@ -76,7 +76,7 @@ Comment[nl]=Deze plugin biedt een weergave voor KOrganizer (zoals de takenlijst 
 Comment[nn]=Dette programtillegget gjev deg ei tidsromvising i KOrganizer (etter modell av oppgåve- og månadsvisingane). Viss du slår på dette tillegget, kan du byta til tidsromvisinga og sjå hendingane i eit Gantt-diagram.
 Comment[pl]=Ta wtyczka tworzy widok zakresu czasu w KOrganizerze (tak jak widok zadań do zrobienia lub widok miesiąca). Po włączeniu tej wtyczki możliwe jest przełączenie się na widok zakresu czasu i przeglądanie zdarzeń jak na diagramie Gantta.
 Comment[pt]=Este 'plugin' oferece uma vista de distribuição temporal para o KOrganizer (como as vistas de itens por-fazer ou mensais). Se activar este 'plugin', poderá mudar para a vista de distribuição temporal e ver os seus eventos como num diagrama de Gantt.
-Comment[pt_BR]=Este plug-in fornece uma visão de período de tempo para o KOrganizer (como a visão de pendências e do mês). Se você ativar este plug-in, você pode mudar para a visão de período de tempo e ver seus eventos como num diagrama de Gantt.
+Comment[pt_BR]=Este plug-in fornece uma visão de período de tempo para o KOrganizer (como a visão de pendências e do mês). Se ativar este plug-in, você pode mudar para a visualização de período de tempo e ver seus eventos como num diagrama de Gantt.
 Comment[ru]=Этот модуль показывает диаграмму Ганта для органайзера KDE. Если вы подключите этот модуль, вы можете посмотреть ваши события в виде диаграммы Ганта.
 Comment[sk]=Tento modul poskytuje projektový pohľad pre korganizer (ako sú úlohy alebo mesačné pohľady). Ak povolíte tento modul, môžete prepínať projektový pohľad a pohľad na udalosti ako je Gantt diagram.
 Comment[sl]=Ta vstavek ponuja časovni prikaz za KOrganizer (kot prikaz opravil ali mesečni prikaz). Če omogočite ta vstavek, lahko preklopite na časovni prikaz in si ogledate dogodke kot v Ganttovem diagramu.
