--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -19,7 +19,7 @@ Name[nl]=KOrganizer-printpluginuiterlijk
 Name[nn]=Grensesnitt til utskriftsprogramtillegg til KOrganizer
 Name[pl]=Interfejs wtyczki drukowania KOrganizera
 Name[pt]=Interface do 'Plugin' de Impressão do KOrganizer
-Name[pt_BR]=Interface do Plug-in de Impressão do KOrganizer
+Name[pt_BR]=Interface do plug-in de impressão do KOrganizer
 Name[sl]=KOrganizerjev vmesnik za tiskalniške vstavke
 Name[sv]=Insticksprogram för Korganizers utskriftsgränssnitt
 Name[tr]=KOrganizer Yazdırma Eklentisi Arayüzü
