--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -35,7 +35,7 @@ Name[nn]=Fargar og skrifter
 Name[pa]=ਰੰਗ ਅਤੇ ਫੋਂਟ
 Name[pl]=Kolory i czcionki
 Name[pt]=Cores e Tipos de Letra
-Name[pt_BR]=Fontes e Cores
+Name[pt_BR]=Fontes e cores
 Name[ro]=Culori și fonturi
 Name[sl]=Barve in pisave
 Name[sv]=Färger och teckensnitt
@@ -68,7 +68,7 @@ Comment[nl]=Instellingen voor kleuren en lettertypen in KOrganizer
 Comment[nn]=Oppsett av fargar og skrifter i KOrganizer
 Comment[pl]=Konfiguracja kolorów i czcionek KOrganizera
 Comment[pt]=Configuração de Cores e Tipos de Letra do KOrganizer
-Comment[pt_BR]=Configuração de Fontes e Cores do KOrganizer
+Comment[pt_BR]=Configuração de fontes e cores do KOrganizer
 Comment[ro]=Configurare culori și fonturi KOrganizer
 Comment[sl]=Nastavitev barv in pisav v KOrganizerju
 Comment[sv]=Inställning av Korganizers färger och teckensnitt
