--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -51,7 +51,7 @@ Name[oc]=Liure/ocupat
 Name[pa]=ਵੇਹਲਾ/ਰੁਝਿਆ
 Name[pl]=Wolny/zajęty
 Name[pt]=Livre/Ocupado
-Name[pt_BR]=Livre/Ocupado
+Name[pt_BR]=Disponibilidade
 Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
@@ -105,7 +105,7 @@ Comment[nl]=KOrganizer vrij/bezet instellen
 Comment[nn]=Oppsett av ledig/oppteken-val i KOrganizer
 Comment[pl]=Konfiguracja czasu wolnego/zajętego dla KOrganizera
 Comment[pt]=Configuração de Livre/Ocupado do KOrganizer
-Comment[pt_BR]=Configuração Livre/Ocupado do KOrganizer
+Comment[pt_BR]=Configuração de disponibilidade do KOrganizer
 Comment[ru]=Настройка свободного и занятого времени органайзера KDE
 Comment[sk]=Nastavenie voľného času pre KOrganizer
 Comment[sl]=Nastavitev prost/zaseden za KOrganizer
