--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -106,7 +106,7 @@ Comment[nl]=KOrganizer algemene instellingen
 Comment[nn]=Hovudoppsett for KOrganizer
 Comment[pl]=Główna konfiguracja KOrganizera
 Comment[pt]=Configuração Principal do KOrganizer
-Comment[pt_BR]=Configuração Principal do KOrganizer
+Comment[pt_BR]=Configuração principal do KOrganizer
 Comment[ru]=Общие настройки органайзера KDE
 Comment[se]=Korganizer, váldoheivehusat
 Comment[sk]=Hlavné nastavenie KOrganizer
