--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -106,7 +106,7 @@ Comment[nl]=KOrganizer plugininstellingen
 Comment[nn]=Oppsett av KOrganizer-programtillegg
 Comment[pl]=Konfiguracja wtyczek KOrganizera
 Comment[pt]=Configuração de 'Plugins' do KOrganizer
-Comment[pt_BR]=Configuração dos Plug-ins do KOrganizer
+Comment[pt_BR]=Configuração dos plug-ins do KOrganizer
 Comment[ro]=Configurare module KOrganizer
 Comment[ru]=Настройки модулей органайзера KDE
 Comment[sk]=Nastavenie modulu KOrganizer
