--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -36,7 +36,7 @@ Name[oc]=Ora e data
 Name[pa]=ਟਾਈਮ ਅਤੇ ਮਿਤੀ
 Name[pl]=Czas i data
 Name[pt]=Hora e Data
-Name[pt_BR]=Data e Hora
+Name[pt_BR]=Data e hora
 Name[ro]=Oră și dată
 Name[sl]=Čas in datum
 Name[sv]=Tid och datum
@@ -68,7 +68,7 @@ Comment[nl]=KOrganizer datum en tijd instellingen
 Comment[nn]=Oppsett av dato og klokkeslett i KOrganizer
 Comment[pl]=Konfiguracja daty i czasu dla KOrganizera
 Comment[pt]=Configuração da Data e Hora no KOrganizer
-Comment[pt_BR]=Configuração de Data e Tempo do KOrganizer
+Comment[pt_BR]=Configuração de data e hora do KOrganizer
 Comment[ro]=Configurare oră și dată KOrganizer
 Comment[sl]=Nastavitev časa in datuma v KOrganizerju
 Comment[sv]=Inställning av Korganizers tid och datum
