--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -34,7 +34,7 @@ Name[nl]=Printstijl voor Wat komt er nu
 Name[nn]=Utskriftsstil for «neste hendingar»
 Name[pl]=Styl drukowania "Do dalej"
 Name[pt]=Estilo de Impressão "O Que Se Segue"
-Name[pt_BR]=Estilo de impressão "A Seguir"
+Name[pt_BR]=Estilo de impressão "A seguir"
 Name[ru]=Даджест
 Name[sk]=Štýl tlače Čo nasleduje
 Name[sl]=Slog tiskanja v obliki »Kaj je naslednje«
@@ -77,7 +77,7 @@ Comment[nl]=Deze plugin maakt het mogelijk om een lijst van alle komende eveneme
 Comment[nn]=Dette programtillegget lèt deg skriva ut ei liste over alle dei kommande hendingane og oppgåvene i hugselista.
 Comment[pl]=Ta wtyczka pozwala wydrukować wszystkie przyszłe zdarzenia i zadania.
 Comment[pt]=Este 'plugin' permite-lhe imprimir uma lista com todos os eventos e itens por-fazer próximos.
-Comment[pt_BR]=Este plug-in permite que você imprima uma lista de todos os próximos eventos e pendências.
+Comment[pt_BR]=Este plug-in permite-lhe imprimir uma lista de todos os próximos eventos e tarefas.
 Comment[ru]=Этот модуль позволяет печатать список будущих событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť zoznam všetkých nadchádzajúcich udalostí a úloh.
 Comment[sl]=Ta vstavek vam omogoča natis seznama vseh prihodnjih dogodkov in čakajočih opravil.
