SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=906040

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -35,6 +35,7 @@ Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
+Comment[da]=Dette plugin giver Dagens billede fra Wikipedia
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
 Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[fr]=Ce module externe fourni l'image du jour de Wikipédia
@@ -43,6 +44,7 @@ Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
 Comment[nl]=Deze plugin geeft de Wikipedia-afbeelding van de dag
+Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
 Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
