SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=906588

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -12,6 +12,7 @@ Name[gl]=Interface de Decoración de Calendarios
 Name[it]=Interfaccia di decorazione del calendario
 Name[ja]=カレンダー装飾インターフェース
 Name[km]=ចំណុច​ប្រទាក់​តុបតែង​ប្រតិទិន
+Name[ko]=달력 장식 인터페이스
 Name[lv]=Kalendāra dekorāciju saskarne
 Name[nb]=Calendar dekorasjonsgrensesnitt
 Name[nds]=Kalennerdekoratschoon-Koppelsteed
