--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -12,6 +12,7 @@ Name[gl]=Interface do Engadido do Calendario
 Name[it]=Interfaccia del plugin calendario
 Name[ja]=カレンダープラグインインターフェース
 Name[km]=ប្រតិទិន​កម្មវិធី​ជំនួយ​ប្រតិទិន
+Name[ko]=달력 플러그인 인터페이스
 Name[lv]=Kalendāra spraudņa saskarne
 Name[nb]=Calendar-grensesnitt for programtillegg
 Name[nds]=Kalennermoduul-Koppelsteed
