--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -12,6 +12,7 @@ Name[gl]=Interface do Engadido de Impresión de KOrganizer
 Name[it]=Interfaccia del plugin di stampa di KOrganizer
 Name[ja]=KOrganizer 印刷プラグインインターフェース
 Name[km]=ចំណុច​ប្រទាក់​កម្មវិធី​ជំនួយ​​បោះពុម្ព KOrganizer
+Name[ko]=KOrganizer 인쇄 플러그인 인터페이스
 Name[lv]=KOrganizer drukāšanas spraudņa saskarne
 Name[nb]=KOrganizer grensesnitt for utskrifts-programtillegg
 Name[nds]=KOrganizer-Druckmoduul-Koppelsteed
