--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -27,6 +27,7 @@ Name[gl]=Hora e Data
 Name[it]=Data e ora
 Name[ja]=日付と時間
 Name[km]=កាលបរិច្ឆេទ និង​ពេលវេលា
+Name[ko]=시간과 날짜
 Name[lv]=Laiks un datums
 Name[nb]=Dato og klokkeslett
 Name[nds]=Tiet un Datum
@@ -61,6 +62,7 @@ Comment[gl]=Configuración da hora e a data do KOrganizer
 Comment[it]=Configurazione data e ora di KOrganizer
 Comment[ja]=KOrganizer 日付と時間の設定
 Comment[km]=កា​រកំណត់​រចនាសម្ព័ន្ធ​កាលបរិច្ឆេទ និង​ពេលវេលា KOrganizer
+Comment[ko]=KOrganizer 시간 및 날짜 설정
 Comment[lv]=KOrganizer laika un datuma konfigurācija
 Comment[nb]=KOrganizer oppsett av dato og klokkeslett
 Comment[nds]=KOrganizer sien Tieden un Daten instellen
