--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -42,6 +42,7 @@ Comment[fr]=Ce module externe fourni l'image du jour de Wikipédia
 Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
+Comment[ko]=위키백과 오늘의 그림을 표시합니다
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
 Comment[nl]=Deze plugin geeft de Wikipedia-afbeelding van de dag
 Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
