--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -12,6 +12,7 @@ Name[gl]=Interface da Parte KOrganizer
 Name[it]=Interfaccia della parte di Korganizer
 Name[ja]=KOrganizer コンポーネントのインターフェース
 Name[km]=ចំណុច​ប្រទាក់​ផ្នែក​របស់ KOrganizer
+Name[ko]=KOrganizer 부분 인터페이스
 Name[lv]=KOrganizer daļas saskarne
 Name[nb]=KOrganizer Part-grensesnitt
 Name[nds]=KOrganizer-Komponent-Koppelsteed
