Separate the desktop files for the app and the part
svn path=/trunk/KDE/kdepim/; revision=906783

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,7 +274,7 @@ install( FILES korganizer.kcfg  DESTINATION ${KCFG_INSTALL_DIR})
 install( FILES korganizer_part.rc  DESTINATION ${DATA_INSTALL_DIR}/korganizer)
 install( FILES dbuscalendar.desktop  DESTINATION ${SERVICETYPES_INSTALL_DIR})
 install( FILES tips  DESTINATION ${DATA_INSTALL_DIR}/korganizer)
-install( FILES webcal.protocol  DESTINATION ${SERVICES_INSTALL_DIR})
+install( FILES korganizer_part.desktop webcal.protocol  DESTINATION ${SERVICES_INSTALL_DIR})
 install( FILES korganizerui.rc  DESTINATION ${DATA_INSTALL_DIR}/korganizer)
 install( FILES korganizer.upd  DESTINATION ${KCONF_UPDATE_INSTALL_DIR})
 install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/ical2vcal DESTINATION ${BIN_INSTALL_DIR})
