--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -41,7 +41,7 @@ Comment[nn]=Kalender- og planleggingsprogram
 Comment[pa]=ਕੈਲੰਡਰ ਅਤੇ ਸ਼ੈਡਿਊਲ ਪਰੋਗਰਾਮ
 Comment[pl]=Kalendarz i terminarz
 Comment[pt]=Calendário e Programa de Escalonamento
-Comment[pt_BR]=Programa de calendário e agenda
+Comment[pt_BR]=Programa de Calendário e Agenda
 Comment[ro]=Program de planificare și calendar
 Comment[ru]=Календарь и личное расписание
 Comment[se]=Kaleandar- ja plánenprográmma
@@ -59,10 +59,9 @@ Comment[x-test]=xxCalendar and Scheduling Programxx
 Comment[xh]=Ikhalenda no Dweliso lwenkqubo Yokucwangcisa
 Comment[zh_CN]=日历和日程安排程序
 Comment[zh_TW]=行事曆與排程軟體
-Exec=korganizer %U
 Icon=korganizer
 X-DocPath=korganizer/index.html
-Type=Application
+Type=Service
 Name=KOrganizer
 Name[af]=Korganizer
 Name[cy]=KTrefnydd
@@ -76,63 +75,5 @@ Name[sv]=Korganizer
 Name[ta]=கேஅமைப்பாளர்
 Name[x-test]=xxKOrganizerxx
 Name[zh_TW]=KOrganizer 行事曆
-GenericName=Personal Organizer
-GenericName[af]=Persoonlike Organiseerder
-GenericName[bg]=Организатор
-GenericName[ca]=Organitzador personal
-GenericName[cs]=Osobní organizér
-GenericName[cy]=Trefnydd Personol
-GenericName[da]=Personlig organisering
-GenericName[de]=Persönliche Daten organisieren
-GenericName[el]=Προσωπικός οργανωτής
-GenericName[en_GB]=Personal Organiser
-GenericName[eo]=Persona Organizilo
-GenericName[es]=Organizador personal
-GenericName[et]=Personaalne ajaarvestus
-GenericName[eu]=Antolatzaile pertsonala
-GenericName[fa]=سازمان‌دهندۀ شخصی
-GenericName[fi]=Henkilökohtainen ajanhallintaohjelma
-GenericName[fr]=Organiseur personnel
-GenericName[fy]=Persoanlike organizer
-GenericName[ga]=Eagraí Pearsanta
-GenericName[gl]=Organizador Persoal
-GenericName[he]=מנהל זמן אישי
-GenericName[hu]=Határidőnapló
-GenericName[is]=Persónuleg skipulagsbók
-GenericName[it]=Organizzatore personale
-GenericName[ja]=個人向けスケジュール管理
-GenericName[ka]=პირადი ორგანიზატორი
-GenericName[kk]=Дербес ұйымдастырғышы
-GenericName[km]=កម្មវិធី​រៀបចំ​ផ្ទាល់​ខ្លួន
-GenericName[ko]=개인 오거나이저
-GenericName[lt]=Asmeninės informacijos tvarkyklė
-GenericName[lv]=Personīgais organizators
-GenericName[mk]=Личен организатор
-GenericName[ms]=Penyusun Peribadi
-GenericName[nb]=Personlig planlegger
-GenericName[nds]=Persöönlich Mötenkalenner
-GenericName[ne]=व्यक्तिगत आयोजक
-GenericName[nl]=Persoonlijke organizer
-GenericName[nn]=Elektronisk lommeplanleggjar
-GenericName[pl]=Osobisty organizator
-GenericName[pt]=Organizador Pessoal
-GenericName[pt_BR]=Organizador pessoal
-GenericName[ro]=Organizator personal
-GenericName[ru]=Персональный органайзер
-GenericName[sk]=Osobný plánovač
-GenericName[sl]=Osebni organizator
-GenericName[sv]=Filofax
-GenericName[ta]=தனிப்பயன் அமைப்பாளர்
-GenericName[tg]=Органайзери инфиродӣ
-GenericName[tr]=Kişisel Yönetim Sistemi
-GenericName[uk]=Персональний тижневик
-GenericName[uz]=Shaxsiy organayzer
-GenericName[uz@cyrillic]=Шахсий органайзер
-GenericName[x-test]=xxPersonal Organizerxx
-GenericName[zh_CN]=个人日程安排
-GenericName[zh_TW]=個人行程組織軟體
-X-KDE-ServiceTypes=DBUS/Organizer
-X-KDE-StartupNotify=true
-X-DBUS-StartupType=Unique
-X-DBUS-ServiceName=org.kde.korganizer
-Categories=Qt;KDE;Office;
+X-KDE-ServiceTypes=Browser/View
+X-KDE-Library=korganizerpart
