SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=907668

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -35,7 +35,8 @@ Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
-Comment[da]=Dette plugin giver Dagens billede fra Wikipedia
+Comment[da]=Dette plugin viser Dagens billede fra Wikipedia
+Comment[de]=Dieses Modul stellt das Bild des Tages aus Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
 Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[fr]=Ce module externe fourni l'image du jour de Wikipédia
