--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -33,7 +33,8 @@ Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
 Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
-Comment[da]=Dette plugin giver links til Wikipedias 'denne dag i historien'-sider
+Comment[da]=Dette plugin viser links til Wikipedias 'denne dag i historien'-sider
+Comment[de]=Dieses Modul stellt eine Verknüpfung auf „Dieser Tag in der Geschichte“ in Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
 Comment[et]=See plugin näitab Wikipedia 'täna ajaloos' lehekülgi
 Comment[fr]=Ce module externe fourni un lien vers la page « Ce jour dans l'histoire » de Wikipédia
