SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=908368

--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -18,6 +18,7 @@ Name[nb]=Calendar-grensesnitt for programtillegg
 Name[nds]=Kalennermoduul-Koppelsteed
 Name[nl]=Agendapluginuiterlijk
 Name[nn]=Grensesnitt til kalender-programtillegg
+Name[pa]=ਕੈਲੰਡਰ ਪਲੱਗਇਨ ਇੰਟਰਫੇਸ
 Name[pl]=Interfejs wtyczek do kalendarza
 Name[pt]=Interface do 'Plugin' de Calendário
 Name[pt_BR]=Interface do Plug-in de Calendário
