--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -34,6 +34,7 @@ Name[nds]=Kalennerdag-Moduul för Kalenners
 Name[ne]=क्यालेन्डरका लागि मिति सङ्ख्या प्लगइन
 Name[nl]=Datumgetallenplugin voor agenda's
 Name[nn]=Kalender-programtillegg for datonummer
+Name[pa]=ਕੈਲੰਡਰਾਂ ਲਈ ਮਿਤੀ ਨੰਬਰ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka numerów dni dla Kalendarzy
 Name[pt]='Plugin' de Números de Datas para Calendários
 Name[pt_BR]=Plug-in de números de datas para calendários
