--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -45,6 +45,7 @@ Comment[ko]=이 플러그인은 위키백과의 '오늘의 역사' 페이지로 
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
 Comment[nl]=Deze plugin levert links tot de Wikipedia-pagina's over een bepaalde dag
 Comment[nn]=Dette programtillegget gjev lenkjer til «Dagen i dag» i Wikipedia
+Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਵਿਕਿਪੀਡਿਆ 'ਇਤਹਾਸ ਵਿੱਚ ਅੱਜ ਦਾ ਦਿਨ' ਲਈ ਲਿੰਕ ਦਿੰਦੀ ਹੈ।
 Comment[pl]=Wtyczka dostarcza linki do stron 'Ten dzień w historii' Wikipedii
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
 Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipedia
